migrate from setInterval to chrome.alarms api

--- a/manifest.json
+++ b/manifest.json
@@ -23,7 +23,8 @@
 		"storage",
 		"notifications",
 		"background",
-		"tabs"
+		"tabs",
+		"alarms"
 	],
 	"options_ui": {
 		"page": "options.html"
